kubernetes/apps/home-automation/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: esphome
  labels:
    app: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: ghcr.io/esphome/esphome
        ports:
          - containerPort: 6052
        volumeMounts:
        - mountPath: "/conf"
          subPath: esphome
          name: unraid-storage
      volumes:
      - name: unraid-storage
        persistentVolumeClaim:
          claimName: unraid-pvc
