kubernetes/apps/home-automation/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: esphome
spec:
  ingressClassName: nginx
  rules:
  - host: esphome.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esphome
            port:
              number: 6052
